tests/test_arithmetic/bad/logical_prio.catala_en
```catala
declaration scope S1:
  output o content boolean

scope S1:
  definition o equals true and (false and true and true) or false
```

```catala-test-inline
$ catala typecheck
[ERROR]
Please add parentheses to explicit which of these operators should be applied first

┌─⯈ tests/test_arithmetic/bad/logical_prio.catala_en:6.28-6.31:
└─┐
6 │   definition o equals true and (false and true and true) or false
  │                            ‾‾‾

┌─⯈ tests/test_arithmetic/bad/logical_prio.catala_en:6.58-6.60:
└─┐
6 │   definition o equals true and (false and true and true) or false
  │                                                          ‾‾
#return code 123#
```
